--- a/css/sass/partials/_elements.scss
+++ b/css/sass/partials/_elements.scss
@@ -321,6 +321,35 @@
         color: inherit;
     }
 
+    .label { 
+        height: 20px;
+        z-index: 20;
+
+        text-transform: uppercase;
+        padding: 1px 15px 16px 10px;
+
+        color: white;
+
+        font-weight: 600;
+        font-size: .75rem;
+        letter-spacing: .4px;
+
+        position: absolute;
+        right: 0px;
+        top: 20px;
+
+        box-shadow:  -2px 2px 6px rgba(23, 23, 23, .1);
+
+        &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+        }
+
+        @media (max-width: $media-s) {           // SMALL BREAKPOINT CHANGE
+            top: 30px;
+        }
+       }
+
     .title-img {
         height: 215px;
         width: 100%;
@@ -336,36 +365,6 @@
             height: 0;
             padding-top: 60%;
         }
-        
-
-        .label { 
-            height: 20px;
-            z-index: 20;
-
-            text-transform: uppercase;
-            padding: 1px 15px 16px 10px;
-
-            color: white;
-
-            font-weight: 600;
-            font-size: .75rem;
-            letter-spacing: .4px;
-
-            position: absolute;
-            right: 0px;
-            top: 20px;
-
-            box-shadow:  -2px 2px 6px rgba(23, 23, 23, .1);
-
-            &:hover {
-                text-decoration: underline;
-                cursor: pointer;
-            }
-
-            @media (max-width: $media-s) {           // SMALL BREAKPOINT CHANGE
-                top: 30px;
-            }
-           }
 
     }
 }
@@ -374,39 +373,46 @@
 
 @mixin article-theme($theme, $img-url) {
 
-    .title-img {
-        background-position: center;
-        background-repeat: no-repeat;
+    .title-img-wrap {
 
-        background-image: url($img-url); 
-        background-size: 103%;
+        overflow: hidden;
 
-        transition: .1s ease-in-out;
-        position: relative;
+        .title-img {
+            background-position: center;
+            background-repeat: no-repeat;
 
-        &::after {
-            content:" ";
-
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background-color: $white;
-            opacity: 0;
-
-            transition: opacity .2s ease-in-out;
-        }
-
-        &:hover::after {
-            opacity: 0.15;
-        }
-
-
-        &:hover {
             background-image: url($img-url); 
-            background-size: 110%;
+            background-size: 103%;
+
+            transition: .1s ease-in-out;
+            position: relative;
+
+            &::after {
+                content:" ";
+
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                background-color: $white;
+                opacity: 0;
+
+                transition: opacity .2s ease-in-out;
+            }
+
+            &:hover::after {
+                opacity: 0.15;
+            }
+
+
+            &:hover {
+                // background-image: url($img-url); 
+                // background-size: 110%;
+                transform: scale(1.075);
+            }
         }
+
     }
 
     .title {
@@ -416,10 +422,9 @@
         font-weight: 600;
     }
 
-     & .label, .btn {
+    & .label, .btn {
         background-color: $theme;
     }
-
 }
 
 //------------------------------------------------------
