--- a/css/sass/partials/_responsive.scss
+++ b/css/sass/partials/_responsive.scss
@@ -37,7 +37,7 @@ $media-l: 1260px;
 
 @media (max-width: $media-s)  {
     .show-s {
-        display: -ms-inline-flexbox;
-        display: inline-flex;
+        // display: -ms-inline-flexbox;
+        display: inline;
     }
 }
